tests/miniJava/neg/000075_mutation.MiniJava
class java { new public static void Main ( String [ ] java ) { { } } }
